Fix formatting in list of required data files

--- a/index.html
+++ b/index.html
@@ -80,11 +80,9 @@ cmake .. &amp;&amp; make
 Eur. Phys. J. C 63 (2009) 189-285<br>
 arXiv:0901.0002 [hep-ph].</p>
 </blockquote>
-</li>
-</ul><p>The filename is <code>mstw2008nlo.00.dat</code>, and it can be downloaded as part of an
+<p>The filename is <code>mstw2008nlo.00.dat</code>, and it can be downloaded as part of an
 archive at the MSTW PDF site <a href="http://mstwpdf.hepforge.org/code/code.html">http://mstwpdf.hepforge.org/code/code.html</a>.</p>
-
-<ul>
+</li>
 <li>
 <p>The data file for the DSS fragmentation functions at NLO, from the paper</p>
 
@@ -94,9 +92,9 @@ archive at the MSTW PDF site <a href="http://mstwpdf.hepforge.org/code/code.html
 Phys. Rev. D 75, 114010 (2007)<br>
 arXiv:hep-ph/0703242</p>
 </blockquote>
-</li>
-</ul><p>The filename is <code>PINLO.DAT</code>. Unfortunately we (authors of SOLO) are not aware of
-a website where this file is directly available.</p>
+<p>The filename is <code>PINLO.DAT</code>, and it is reportedly available on request from the authors of the DSS paper. Unfortunately we (authors of SOLO) are not aware of
+a website where this file is directly downloadable.</p></li>
+</ul>
 
 <h1>
 <a name="running" class="anchor" href="#running"><span class="octicon octicon-link"></span></a>Running</h1>
